# raytracer.rs

./: .gitignore  Cargo.toml  README.md  canvas.ppm
src/: camera.rs  canvas.rs  color.rs  intersections.rs  lib.rs  light.rs  material.rs  matrix.rs  object.rs  patterns.rs  plane.rs  ray.rs  shapes.rs  sphere.rs  tuple.rs  utils.rs  world.rs
src/shapes/: cube.rs  plane.rs  sphere.rs
src/tests/: camera_tests.rs  cube_test.rs  material_test.rs  matrix_tests.rs  mod.rs  patterns_tests.rs  ray_tests.rs  sphere_tests.rs  tuples_tests.rs  world_test.rs
src/traits/: intersect.rs
tests/: camera_tests.rs  canvas_tests.rs  material_test.rs  matrix_tests.rs  mod.rs  reflections_tests.rs
