[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
[profile.release]
opt-level = 3
#debug=1
#[build]
#rustflags = ["-C", "symbol-mangling-version=v0"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = { version = "0.24.7" }
rayon = "1.8.0"